[package]
name = "distance-cartogram"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Matthieu Viry <matthieu.viry@cnrs.fr>"]

[dependencies]
geo-types = "0.7"
thiserror = "2.0"
pcoa = { version = "0.1", optional = true }
csv = { version = "1.3", optional = true }
rayon = { version = "1.10", optional = true }

[dev-dependencies]
geojson = "0.24.1"

[features]
parallel = ["dep:rayon"]
moving-points-unipolar = []
moving-points-multipolar = ["dep:pcoa", "dep:csv"]
